mesh/virtual-service-retry.yaml
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: order-retry
  namespace: yas-dev
spec:
  hosts:
    - yas-dev-order.yas-dev.svc.cluster.local
  http:
    - retries:
        attempts: 3
        perTryTimeout: 2s
        retryOn: 5xx,connect-failure,refused-stream
      route:
        - destination:
            host: yas-dev-order.yas-dev.svc.cluster.local
            port:
              number: 80
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: tax-retry
  namespace: yas-dev
spec:
  hosts:
    - yas-dev-tax.yas-dev.svc.cluster.local
  http:
    - retries:
        attempts: 3
        perTryTimeout: 2s
        retryOn: 5xx,connect-failure,refused-stream
      route:
        - destination:
            host: yas-dev-tax.yas-dev.svc.cluster.local
            port:
              number: 80
